--- a/BulkyWeb/Views/Shared/_Layout.cshtml
+++ b/BulkyWeb/Views/Shared/_Layout.cshtml
@@ -30,6 +30,9 @@
                     <li class="nav-item">
                         <a class="nav-link" asp-area="Admin" asp-controller="Category" asp-action="Index">Category</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" asp-area="Admin" asp-controller="Product" asp-action="Index">Product</a>
+                    </li>
 
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -38,6 +41,9 @@
                         <ul class="dropdown-menu">
                             <li>
                                 <a class="dropdown-item" asp-area="Admin" asp-controller="Category" asp-action="Index">Category</a>
+                            </li>
+                            <li>
+                                <a class="dropdown-item" asp-area="Admin" asp-controller="Product" asp-action="Index">Product</a>
                             </li>
                             @* <li> *@
                             @*     <a class="dropdown-item" href="#">Another action</a> *@
