--- a/BulkyWeb/Areas/Admin/Views/Product/Edit.cshtml
+++ b/BulkyWeb/Areas/Admin/Views/Product/Edit.cshtml
@@ -19,6 +19,43 @@
             <input asp-for="Price" class="form-control" type="text"/>
             <span asp-validation-for="Price" class="text-danger"></span>
         </div>
+        <div class="mb-3">
+            <label asp-for="Author"></label>
+            <input asp-for="Author" class="form-control" type="text"/>
+            <span asp-validation-for="Author" class="text-danger"></span>
+        </div>
+        <div class="mb-3">
+            <label asp-for="Description"></label>
+            <input asp-for="Description" class="form-control" type="text"/>
+            <span asp-validation-for="Description" class="text-danger"></span>
+        </div>
+        <div class="mb-3">
+            <label asp-for="ISBN"></label>
+            <input asp-for="ISBN" class="form-control" type="text"/>
+            <span asp-validation-for="ISBN" class="text-danger"></span>
+        </div>
+        <div class="mb-3">
+            <label asp-for="ListPrice"></label>
+            <input asp-for="ListPrice" class="form-control" type="text"/>
+            <span asp-validation-for="ListPrice" class="text-danger"></span>
+        </div>
+        <div class="mb-3">
+            <label asp-for="Price50"></label>
+            <input asp-for="Price50" class="form-control" type="text"/>
+            <span asp-validation-for="Price50" class="text-danger"></span>
+        </div>
+        <div class="mb-3">
+            <label asp-for="Price100"></label>
+            <input asp-for="Price100" class="form-control" type="text"/>
+            <span asp-validation-for="Price100" class="text-danger"></span>
+        </div>
+        <div class="mb-3">
+            <label asp-for="CategoryId"></label>
+            <input asp-for="CategoryId" class="form-control" type="text"/>
+            <span asp-validation-for="CategoryId" class="text-danger"></span>
+        </div>
+        
+
 
         <div class="row">
             <div class="col-6">
