--- a/BulkyWeb/Areas/Admin/Views/Product/Index.cshtml
+++ b/BulkyWeb/Areas/Admin/Views/Product/Index.cshtml
@@ -18,13 +18,13 @@
 
     <thead>
     <tr>
-        <th>
-            Product Title
-        </th>
-        <th>
-            Product Price
-        </th>
-        <th></th>
+        <th>Title</th>
+        <th>Price</th>
+        <th>Description</th>
+        <th>ISBN</th>
+        <th>List Price</th>
+        <th>Price 50+</th>
+        <th>Price 100+</th>
     </tr>
     </thead>
 
@@ -35,6 +35,11 @@
             <tr>
                 <td>@product.Title</td>
                 <td>@product.Price</td>
+                <td>@product.Description</td>
+                <td>@product.ISBN</td>
+                <td>@product.ListPrice</td>
+                <td>@product.Price50</td>
+                <td>@product.Price100</td>
                 <td>
                     <div class="w-75 btn-group" role="group">
                         <a asp-controller="Product" asp-action="Edit" asp-route-id="@product.Id" class="btn btn-primary mx-2">
